# frame

./: .gitignore  pyproject.toml  sandbox.ipynb
src/frame/: __init__.py  cache.py  calendar.py  config.py  core.py  executor.py  logging.py  memory_cache.py  mixins.py  proxy.py  utils.py  validation.py
src/frame/backends/: __init__.py  base.py  pandas.py  polars.py
src/frame/ops/: __init__.py  align.py  base.py  binary.py  concat.py  conversion.py  cross_sectional.py  dtshift.py  join.py  timeseries.py  unary.py
tests/: __init__.py  conftest.py  test_align.py  test_backends.py  test_cache.py  test_calendar.py  test_core.py  test_cross_sectional.py  test_dtshift.py  test_join.py  test_memory_cache.py  test_ops.py  test_proxy.py  test_timeseries.py  test_validation.py
